--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ body {
 
 .container {
 	width: 100%;
-	margin: 5% auto;
+	padding-top: 55px;
 }
 .col-4 {
 	width: 25%;
@@ -41,6 +41,10 @@ h1 {
 	height: 40px;
 	width: 300px;
 	font-size: calc(2rem + 0.9vw);
+}
+
+.bottomtext {
+	font-size: calc(0.8rem + 0.5vw);
 }
 
 @media (min-width: 768px) {
